trunk/Archive2/20/e257dd624cfa22/output
main.cpp:12:5: error: static_assert failed
    static_assert(std::is_same<decltype(Sales_data()), Sales_data&&>::value);
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
